--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 main {
+    background-color: red;
     display: flex;
     align-items: center;
     justify-content: center;
