--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 main {
-    background-color: red;
+    background-color: yellow;
     display: flex;
     align-items: center;
     justify-content: center;
